# aoc

./: .gitignore
2019/julia/AOC2019/: Manifest.toml  Project.toml
2019/julia/AOC2019/src/: AOC2019.jl  instructions.jl  parsers.jl
2019/julia/AOC2019/test/: runtests.jl
2020/: tester.jl
2020/data/: benches_jl.csv
2020/fsharp/: fsharp.sln  out.txt
2020/fsharp/AOC/: AOC.fsproj  Day1.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day19.fs  Day2.fs  Day3.fs  Day4.fs  Day5.fs  Day6.fs  Day7.fs  Day8.fs  Day9.fs  Library.fs  Parsers.fs
2020/fsharp/AOC.Benchmarks/: AOC.Benchmarks.fsproj  Program.fs
2020/fsharp/AOC.Tests/: AOC.Tests.fsproj  Tests.fs
2020/julia/AOC/: Project.toml  benches.jl
2020/julia/AOC/src/: AOC.jl  day1.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day2.jl  day3.jl  day4.jl  day5.jl  day6.jl  day7.jl  day8.jl  day9.jl  parsers.jl
2020/julia/AOC/test/: runtests.jl
2020/rust/aoc/: Cargo.toml
2020/rust/aoc/benches/: aoc.rs
2020/rust/aoc/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  parsers.rs  template.rs
2021/fsharp/: fsharp.sln
2021/fsharp/AOC/: AOC.fsproj  Day01.fs  Day02.fs  Day03.fs  Day04.fs  Day05.fs  Day06.fs  Day07.fs  Day08.fs  Day09.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Library.fs  Parsers.fs
2021/fsharp/AOC.Benchmarks/: AOC.Benchmarks.fsproj  Program.fs
2021/fsharp/AOC.Tests/: AOC.Tests.fsproj  Tests.fs
