[package]
name = "aoc"
version = "0.1.0"
authors = ["Alex Weech <abw@alexweech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc"
harness = false
